--- a/avenue/markup/index.html
+++ b/avenue/markup/index.html
@@ -10,90 +10,72 @@
 </head>
 <body>
 
-<!-- TODO: refactor this shit with ul/li + css -->
-<header class="header">
+<div class="top-bar">
   <div class="container">
-    <div class="header__inner">
-      <div class="header__currency">
-        <span>Currency:</span>
-        <div class="dropdown dropdown--currency">
-          <a href="" class="dropdown__btn dropdown__btn--currency">GBP&nbsp;<i class="fa-solid fa-chevron-down"></i></a>
-          <div class="dropdown__content dropdown__content--currency">
-            <a href="">USD</a>
-            <a href="">EUR</a>
-            <a href="">RUB</a>
-          </div>
-        </div>
-      </div>
-      <div class="header__right">
-        <div class="header__auth_links">
-          <a href="" class="header__link">Register</a>
-          <a href="" class="header__link">Sign In</a>
-        </div>
-        <div class="dropdown dropdown--cart">
-          <a href="" class="dropdown__btn dropdown__btn--cart">
-            <i class="fa-solid fa-cart-shopping"></i>&nbsp;empty&nbsp;<i class="fa-solid fa-chevron-down"></i>
-          </a>
-          <div class="dropdown__content dropdown__content--cart">
-            <a href="">SOME_THING</a>
-            <a href="">SOME_THING</a>
-            <a href="">SOME_THING</a>
-          </div>
-        </div>
-      </div>
+    <div class="top-bar__iner">
+
     </div>
   </div>
-</header>
+</div>
 
+<!-- intro -->
 <section class="intro">
-  <div class="container--wide">
-    <div class="intro__inner">
-      <div class="intro__header">
-        <h1 class="intro__header_logo"><b>avenue</b> fashion</h1>
-        <div class="intro__header_content">
-          <nav class="nav">
-            <div class="dropdown">
-              <a href="" class="dropdown__btn">text</a>
-              <div class="dropdown__content">
-                <a href="">SOME_THING</a>
-                <a href="">SOME_THING</a>
-                <a href="">SOME_THING</a>
-              </div>
-            </div>
+  <div class="intro__background-layer">
+    <div class="container container--wide">
+      <div class="intro__inner">
 
-            <div class="dropdown">
-              <a href="" class="dropdown__btn">text</a>
-              <div class="dropdown__content">
-                <a href="">SOME_THING</a>
-                <a href="">SOME_THING</a>
-                <a href="">SOME_THING</a>
-              </div>
-            </div>
-            <a href="#"></a>
-            <a href="#"></a>
-            <div class="dropdown">
-              <a href="" class="dropdown__btn">text</a>
-              <div class="dropdown__content">
-                <a href="">SOME_THING</a>
-                <a href="">SOME_THING</a>
-                <a href="">SOME_THING</a>
-              </div>
-            </div>
-          </nav>
-          <div class="search"></div>
-        </div>
-      </div>
-      <div class="intro__content">
-        <div class="slider">
-          <div class="slider__item"></div>
-          <div class="slider__item display_none"></div>
-          <div class="slider__item display_none"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+        <header class="intro__header">
+          <div class="left">
+            <h1 class="intro__logo"><b>avenue</b>&nbsp;fashion</h1>
+          </div>
 
+          <!-- TODO: add i from fontawesome. link its display property to subnav-true class -->
+          <div class="right">
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="" class="nav__link subnav-true" data=>link</a>
+                  <div class="nav__subnav">
+
+                  </div>
+                </li>
+                <li class="nav__item">
+                  <a href="" class="nav__link subnav-true">link</a>
+                  <div class="nav__subnav">
+
+                  </div>
+                </li>
+                <li class="nav__item">
+                  <a href="" class="nav__link">link</a>
+                </li>
+                <li class="nav__item">
+                  <a href="" class="nav__link">link</a>
+                </li>
+                <li class="nav__item">
+                  <a href="" class="nav__link subnav-true">link</a>
+                  <div class="nav__subnav">
+
+                  </div>
+                </li>
+              </ul>
+            </nav>
+            <form action="" class="intro__Search" method="get">
+              <input type="search" name="search-input" value="">
+              <input type="submit" name="" value="">
+            </form>
+          </div><!-- right -->
+        </header><!-- intro__header -->
+
+        <div class="intro__slider">
+          <div class="intro__slide">
+            <a href="" class="intro__btn btn">shop men's collection</a>
+          </div>
+        </div>
+
+      </div><!-- intro__inner -->
+    </div><!-- container -->
+  </div><!-- intro__background-layer -->
+</section><!-- intro -->
 
 <script type="text/javascript" src="assets/javascript/script.js"></script>
 </body>
